..F....... [ZBX-20397] fixed draggable object alignment in Dashboard for map navigation tree widget

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -5187,6 +5187,7 @@ svg {
 				> .content {
 					display: flex;
 					height: 20px;
+					align-items: center;
 
 					> .arrow {
 						flex: 0 0 15px;
